tests/fixtures/invalid/set_floordiv_bool.py
# Cannot floor divide Set[int] and Bool
x: set[int] = {1, 2, 3} // True
